<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/title_include"
        layout="@layout/include_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></include>

    <RelativeLayout
        android:id="@+id/recommend_friend_rel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_55dp"
        android:layout_marginTop="@dimen/textSize_15sp"
        android:layout_marginBottom="@dimen/padding_15dp"
        android:paddingLeft="@dimen/padding_15dp"
        android:paddingRight="@dimen/padding_15dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/userhead"
            android:textColor="@color/color_2D2D2D"
            android:textSize="@dimen/textSize_15sp" />


        <FrameLayout
            android:id="@+id/fl_head"
            android:layout_width="@dimen/padding_55dp"
            android:layout_height="@dimen/padding_55dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_gravity="center_vertical">

            <com.national.qinggong.customview.SelectableRoundedImageView
                android:id="@+id/img_user_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/userdefault"
                app:sriv_left_bottom_corner_radius="30dip"
                app:sriv_left_top_corner_radius="30dip"
                app:sriv_right_bottom_corner_radius="30dip"
                app:sriv_right_top_corner_radius="30dip" />
        </FrameLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#F5F5F5"></View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textSize_15sp"
        android:layout_marginBottom="@dimen/padding_15dp"
        android:paddingLeft="@dimen/padding_15dp"
        android:paddingRight="@dimen/padding_15dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/user_mingcheng"
            android:textColor="@color/color_2D2D2D"
            android:textSize="@dimen/textSize_15sp" />

        <TextView
            android:id="@+id/mingcheng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:text="小包子"
            android:textColor="@color/color_b0b0b0"
            android:textSize="@dimen/textSize_15sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#F5F5F5"></View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textSize_15sp"
        android:layout_marginBottom="@dimen/padding_15dp"
        android:paddingLeft="@dimen/padding_15dp"
        android:paddingRight="@dimen/padding_15dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/user_pass_alert"
            android:textColor="@color/color_2D2D2D"
            android:textSize="@dimen/textSize_15sp" />

        <TextView
            android:id="@+id/pass_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:drawableRight="@mipmap/next_page"
            android:drawablePadding="@dimen/padding_10dp"
            android:text="@string/alert"
            android:textColor="@color/color_b0b0b0"
            android:textSize="@dimen/textSize_15sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#F5F5F5"></View>


    <TextView
        android:id="@+id/submit_alert"
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_35dp"
        android:layout_marginLeft="@dimen/padding_25dp"
        android:layout_marginTop="@dimen/padding_100dp"
        android:layout_marginRight="@dimen/padding_25dp"
        android:background="@drawable/btn__angle_normal"
        android:gravity="center"
        android:text="确认修改"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>