<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <include layout="@layout/include_title"></include>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/padding_16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_8dp"
                        android:layout_weight="1"
                        android:background="@drawable/open_account_drawable"
                        android:gravity="center"
                        android:paddingTop="@dimen/padding_15dp"
                        android:paddingBottom="@dimen/padding_15dp"
                        android:text="@string/open_account_first"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_8dp"
                        android:layout_marginRight="@dimen/padding_8dp"
                        android:layout_weight="1"
                        android:background="@drawable/open_accounrt_default"
                        android:gravity="center"
                        android:paddingTop="@dimen/padding_15dp"
                        android:paddingBottom="@dimen/padding_15dp"
                        android:text="@string/open_account_second"
                        android:textColor="#333333"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/open_accounrt_default"
                        android:gravity="center"
                        android:paddingTop="@dimen/padding_15dp"
                        android:paddingBottom="@dimen/padding_15dp"
                        android:text="@string/open_account_third"
                        android:textColor="#333333"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_8dp"
                        android:layout_marginRight="@dimen/padding_8dp"
                        android:layout_weight="1"
                        android:background="@drawable/open_accounrt_default"
                        android:gravity="center"
                        android:paddingTop="@dimen/padding_15dp"
                        android:paddingBottom="@dimen/padding_15dp"
                        android:text="@string/open_account_four"
                        android:textColor="#333333"
                        android:textSize="14sp" />
                </LinearLayout>
                <!--上传身份证-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_15dp"
                    android:layout_marginTop="@dimen/padding_26dp"
                    android:text="上传身份证"
                    android:textColor="#ff333333"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/shenfenz"
                        android:drawablePadding="@dimen/padding_12dp"
                        android:gravity="center"
                        android:text="身份证正面"
                        android:textColor="#333333"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/shenfenzheng_f"
                        android:drawablePadding="@dimen/padding_12dp"
                        android:gravity="center"
                        android:text="身份证反面"
                        android:textColor="#333333"
                        android:textSize="13sp" />
                </LinearLayout>
                <!--身份证输入-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_15dp"
                    android:background="@drawable/circle_drawable"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/padding_14dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:text="账户姓名:"
                            android:textColor="#ff333333"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.8"
                            android:text="请输入账户姓名"
                            android:textColor="#ffcccccc"
                            android:textSize="15sp" />


                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#F2F2F2" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/padding_14dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:text="身份证号码:"
                            android:textColor="#ff333333"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.8"
                            android:text="请输入身份证号"
                            android:textColor="#ffcccccc"
                            android:textSize="15sp" />


                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#F2F2F2" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/padding_14dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:text="省份:"
                            android:textColor="#ff333333"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.8"
                            android:text="请输入省份"
                            android:textColor="#ffcccccc"
                            android:textSize="15sp" />


                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#F2F2F2" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/padding_14dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:text="联系地址:"
                            android:textColor="#ff333333"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.8"
                            android:text="请输入联系地址"
                            android:textColor="#ffcccccc"
                            android:textSize="15sp" />


                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#F2F2F2" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/padding_14dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:text="邮政编码："
                            android:textColor="#ff333333"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.8"
                            android:text="请输入邮政编码"
                            android:textColor="#ffcccccc"
                            android:textSize="15sp" />


                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#F2F2F2" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/padding_14dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:text="电子邮箱："
                            android:textColor="#ff333333"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.8"
                            android:text="请输入电子邮箱"
                            android:textColor="#ffcccccc"
                            android:textSize="15sp" />


                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/next"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/padding_35dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginRight="25dp"
                    android:background="@drawable/btn__angle_normal"
                    android:gravity="center"
                    android:text="下一步"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/padding_100dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginRight="25dp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:visibility="invisible" />

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>


    </LinearLayout>
</LinearLayout>